# image-sorter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  event.rs  image_display.rs  input.rs  main.rs  render.rs
