[package]
name = "image-sorter"
description = "A terminal user interface for sorting images"
version = "0.1.0"
authors = ["Jorge Galat <jrgglt@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
clap = "2.33.3"
subprocess = "0.2.6"
tui = { version = "0.12.0", features = ["termion"], default-features = false }
termion = "1.5.5"
