[package]
name = "image-sorter"
description = "A terminal user interface for sorting images"
keywords = ["image", "sort", "tui", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/jgalat/image-sorter"
documentation = "https://github.com/jgalat/image-sorter"
repository = "https://github.com/jgalat/image-sorter"
exclude = [".github/*"]
version = "0.4.0"
authors = ["Jorge Galat <jrgglt@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
structopt = { version = "0.3", default-features = false }
subprocess = "0.2.6"
ratatui = { version = "0.23", default-features = false, features = ["termion"] }
termion = "2.0.1"
crossbeam-channel = "0.5.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "image-sorter"
